don't used deprecated Long constructor